--- a/src/App.scss
+++ b/src/App.scss
@@ -16,6 +16,7 @@
         width: 300px;
         height: 272px;
         object-fit: cover;
+        cursor: pointer;
       }
       #img-text {
         display: flex;
