--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,5 @@
 $primary: crimson;
+$secondary: antiquewhite;
 
 * {
   box-sizing: border-box;
@@ -9,28 +10,38 @@ $primary: crimson;
   width: 90%;
   margin-inline: auto;
   max-width: 1320px;
-  padding-block: 30px;
-  background-color: antiquewhite;
+  padding-top: 30px;
   h1 {
     font-size: 48px;
     text-align: center;
     margin-bottom: 30px;
   }
-  #tab-container {
-    margin-inline: 40px;
+  #tab-wrapper {
+    padding-inline: 40px;
     display: flex;
     flex-wrap: wrap;
     margin-bottom: -1px;
+    max-width: 1320px;
     > div {
-      padding: 15px;
+      padding: 15px 20px;
       border: 1px solid $primary;
       cursor: pointer;
+      background-color: $secondary;
+      &:first-child {
+        border-top-left-radius: 5px;
+      }
+      &:last-child {
+        border-top-right-radius: 5px;
+      }
       &.active {
         background-color: $primary;
         color: white;
       }
       &:not(.active):hover {
         background-color: lightyellow;
+      }
+      &:not(:last-child) {
+        border-right: 0;
       }
     }
   }
@@ -41,13 +52,20 @@ $primary: crimson;
     gap: 20px;
     margin-inline: auto;
     padding-block: 30px;
-    border-top: 1px solid $primary;
+    border: 1px solid $primary;
+    border-radius: 6px;
+    background-color: $secondary;
     .card {
       img {
         width: 300px;
         height: 272px;
         object-fit: cover;
         cursor: pointer;
+        border-radius: 5px;
+        &:hover {
+          filter: opacity(0.9) brightness(1.2);
+          transform: scale(1.03);
+        }
       }
       #img-text {
         display: flex;
@@ -64,6 +82,35 @@ $primary: crimson;
           -webkit-box-orient: vertical;
           max-width: 90%;
         }
+      }
+      &.bookmarked {
+        img {
+          cursor: auto;
+          pointer-events: none;
+        }
+        h2 {
+          color: $primary;
+          text-shadow: 1px 1px 3px white;
+        }
+      }
+    }
+  }
+  &.fixedTabs {
+    margin-bottom: 100px;
+    #tab-container {
+      position: fixed;
+      bottom: 0;
+      width: 100vw;
+      left: 0;
+      background-color: $secondary;
+      border-top: 1px solid $primary;
+      margin-bottom: -25px;
+      z-index: 100;
+      #tab-wrapper {
+        width: 90%;
+        margin-inline: auto;
+        position: relative;
+        bottom: 53px;
       }
     }
   }
