--- a/src/App.scss
+++ b/src/App.scss
@@ -7,90 +7,96 @@ $secondary: antiquewhite;
   padding: 0;
 }
 #kitten-gallery {
-  width: 90%;
   margin-inline: auto;
-  max-width: 1320px;
   padding-top: 30px;
   h1 {
     font-size: 48px;
     text-align: center;
     margin-bottom: 30px;
   }
-  #tab-wrapper {
-    padding-inline: 40px;
-    display: flex;
-    flex-wrap: wrap;
-    margin-bottom: -1px;
+  #tab-container {
     max-width: 1320px;
-    > div {
-      padding: 15px 20px;
-      border: 1px solid $primary;
-      cursor: pointer;
-      background-color: $secondary;
-      &:first-child {
-        border-top-left-radius: 5px;
-      }
-      &:last-child {
-        border-top-right-radius: 5px;
-      }
-      &.active {
-        background-color: $primary;
-        color: white;
-      }
-      &:not(.active):hover {
-        background-color: lightyellow;
-      }
-      &:not(:last-child) {
-        border-right: 0;
+    margin-inline: auto;
+    #tab-wrapper {
+      padding-inline: 40px;
+      display: flex;
+      flex-wrap: wrap;
+      margin-bottom: -1px;
+      max-width: 1320px;
+      > div {
+        padding: 15px 20px;
+        border: 1px solid $primary;
+        cursor: pointer;
+        background-color: $secondary;
+        &:first-child {
+          border-top-left-radius: 5px;
+        }
+        &:last-child {
+          border-top-right-radius: 5px;
+        }
+        &.active {
+          background-color: $primary;
+          color: white;
+        }
+        &:not(.active):hover {
+          background-color: lightyellow;
+        }
+        &:not(:last-child) {
+          border-right: 0;
+        }
       }
     }
   }
-  #cards-wrapper {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, 300px);
-    justify-content: center;
-    gap: 20px;
-    margin-inline: auto;
-    padding-block: 30px;
-    border: 1px solid $primary;
-    border-radius: 6px;
+  #cards-container {
     background-color: $secondary;
-    .card {
-      img {
-        width: 300px;
-        height: 272px;
-        object-fit: cover;
-        cursor: pointer;
-        border-radius: 5px;
-        &:hover {
-          filter: opacity(0.9) brightness(1.2);
-          transform: scale(1.03);
-        }
-      }
-      #img-text {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding-inline: 3px;
-        svg {
-          margin-top: 3px;
-        }
-        h2 {
-          overflow: hidden;
-          display: -webkit-box !important;
-          -webkit-line-clamp: 3;
-          -webkit-box-orient: vertical;
-          max-width: 90%;
-        }
-      }
-      &.bookmarked {
+    border-block: 1px solid $primary;
+    #cards-wrapper {
+      max-width: 1320px;
+      display: grid;
+      grid-template-columns: repeat(auto-fill, 300px);
+      justify-content: center;
+      gap: 20px;
+      margin-inline: auto;
+      padding-block: 30px;
+      .card {
         img {
-          cursor: auto;
-          pointer-events: none;
+          width: 300px;
+          height: 272px;
+          object-fit: cover;
+          cursor: pointer;
+          border-radius: 5px;
+          transition: all 0.5s ease;
+
+          &:hover {
+            filter: opacity(0.9) brightness(1.15);
+            transform: scale(1.02);
+          }
         }
-        h2 {
-          color: $primary;
-          text-shadow: 1px 1px 3px white;
+        #img-text {
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+          padding-inline: 3px;
+          svg {
+            margin-top: 3px;
+          }
+          h2 {
+            overflow: hidden;
+            display: -webkit-box !important;
+            -webkit-line-clamp: 3;
+            -webkit-box-orient: vertical;
+            max-width: 90%;
+          }
+        }
+        &.bookmarked {
+          img {
+            cursor: auto;
+            pointer-events: none;
+          }
+          h2 {
+            color: $primary;
+            text-shadow: 1px 1px 3px white;
+          }
         }
       }
     }
@@ -106,6 +112,7 @@ $secondary: antiquewhite;
       border-top: 1px solid $primary;
       margin-bottom: -25px;
       z-index: 100;
+      max-width: none;
       #tab-wrapper {
         width: 90%;
         margin-inline: auto;
