--- a/src/App.scss
+++ b/src/App.scss
@@ -9,6 +9,7 @@ $secondary: antiquewhite;
 #kitten-gallery {
   margin-inline: auto;
   padding-top: 30px;
+  min-width: 400px;
   h1 {
     font-size: 48px;
     text-align: center;
@@ -41,9 +42,6 @@ $secondary: antiquewhite;
         &:not(.active):hover {
           background-color: lightyellow;
         }
-        &:not(:last-child) {
-          border-right: 0;
-        }
       }
     }
   }
@@ -59,6 +57,7 @@ $secondary: antiquewhite;
       margin-inline: auto;
       padding-block: 30px;
       .card {
+        position: relative;
         img {
           width: 300px;
           height: 272px;
@@ -66,11 +65,20 @@ $secondary: antiquewhite;
           cursor: pointer;
           border-radius: 5px;
           transition: all 0.5s ease;
-
           &:hover {
             filter: opacity(0.9) brightness(1.15);
             transform: scale(1.02);
           }
+        }
+        .folder {
+          color: white;
+          text-shadow: 1px 1px black;
+          position: absolute;
+          top: 10px;
+          right: 10px;
+          background-color: rgba($secondary, 0.8);
+          border-radius: 15px;
+          padding: 5px 10px;
         }
         #img-text {
           display: flex;
