--- a/src/App.scss
+++ b/src/App.scss
@@ -65,6 +65,7 @@ $secondary: antiquewhite;
           cursor: pointer;
           border-radius: 5px;
           transition: all 0.5s ease;
+          filter: drop-shadow(2px 4px 3px #bdbdbd);
           &:hover {
             filter: opacity(0.9) brightness(1.15);
             transform: scale(1.02);
@@ -94,6 +95,7 @@ $secondary: antiquewhite;
             -webkit-line-clamp: 3;
             -webkit-box-orient: vertical;
             max-width: 90%;
+            line-height: 26px;
           }
         }
         &.bookmarked {
@@ -104,6 +106,12 @@ $secondary: antiquewhite;
           h2 {
             color: $primary;
             text-shadow: 1px 1px 3px white;
+          }
+        }
+        &.noPointer {
+          img {
+            cursor: auto;
+            pointer-events: none;
           }
         }
       }
